--- a/laravel/dev/index.html
+++ b/laravel/dev/index.html
@@ -17,8 +17,7 @@
     </head>
     <body>
         <div class="container">
-            <div class="hero-unit">
-            </div>
+            <div class="left-sidebar"></div>
         </div>
 
         <!--[if lt IE 7]>
