refactor backbone module and small changes

--- a/laravel/dev/index.html
+++ b/laravel/dev/index.html
@@ -16,8 +16,17 @@
         <!-- endbuild -->
     </head>
     <body>
-        <div class="container">
-            <div class="left-sidebar"></div>
+        <div class="container-fluid">
+            <div class="row-fluid">
+               <div class="span2">
+                   <!--Sidebar content-->
+                   <div class="left-sidebar"></div>
+               </div>
+               <div class="span10">
+                   <!--Body content-->
+                   body
+               </div>
+            </div>
         </div>
 
         <!--[if lt IE 7]>
