add search module

--- a/laravel/dev/index.html
+++ b/laravel/dev/index.html
@@ -20,7 +20,8 @@
             <div class="row-fluid">
                <div class="span2">
                    <!--Sidebar content-->
-                   <div class="left-sidebar"></div>
+                   <div class="search"></div>
+                   <div class="engines"></div>
                </div>
                <div class="span10">
                    <!--Body content-->
