--- a/laravel/dev/index.html
+++ b/laravel/dev/index.html
@@ -25,7 +25,7 @@
                </div>
                <div class="span10">
                    <!--Body content-->
-                   body
+                   <div class="iframe"></div>
                </div>
             </div>
         </div>
