remove padding for main container and border for iframe

--- a/laravel/dev/index.html
+++ b/laravel/dev/index.html
@@ -16,7 +16,7 @@
         <!-- endbuild -->
     </head>
     <body>
-        <div class="container-fluid">
+        <div class="container-fluid main-container">
             <div class="row-fluid">
                <div class="span2">
                    <!--Sidebar content-->
