--- a/laravel/dev/index.html
+++ b/laravel/dev/index.html
@@ -17,10 +17,29 @@
     </head>
     <body>
         <div class="container-fluid main-container">
+
+            <div class="navbar navbar-static-top">
+              <div class="navbar-inner">
+                <div class="container">
+                  <a class="brand" href=".">Torrent Engine Searcher</a>
+                  <div class="nav-collapse collapse">
+                    <ul class="nav">
+                      <li class="active">
+                        <a href=".">Home</a>
+                      </li>
+                      <li>
+                        <a href="getting-started.html">Get started</a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+
             <div class="row-fluid">
                <div class="span2">
                    <!--Sidebar content-->
-                   <div class="search"></div>
+                   <div class="search row-fluid"></div>
                    <div class="engines"></div>
                </div>
                <div class="span10">
