--- a/dev/index.html
+++ b/dev/index.html
@@ -6,8 +6,8 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
-        <meta name="description" content="">
+        <title>TorrentScan - BitTorrent meta-search engine | Torrents Search Engine Searcher - Torrent Scan</title>
+        <meta name="description" content="Scan all the best torrent engines from one site and find the torrents you want.">
         <meta name="viewport" content="width=device-width">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
         <link rel="stylesheet" href="styles/main.css">
