--- a/dev/index.html
+++ b/dev/index.html
@@ -28,7 +28,7 @@
                         <a href=".">Home</a>
                       </li>
                       <li>
-                        <a href="getting-started.html">Get started</a>
+                        <a href=".">Get started</a>
                       </li>
                     </ul>
                   </div>
@@ -37,14 +37,12 @@
             </div>
 
             <div class="row-fluid">
-               <div class="span2">
+               <div class="sidebar span2">
                    <!--Sidebar content-->
                    <div class="search row-fluid"></div>
-                   <div class="engines"></div>
                </div>
-               <div class="span10">
+               <div class="content span10">
                    <!--Body content-->
-                   <div class="iframe"></div>
                </div>
             </div>
         </div>
