replace navbar html with navbar ui module

--- a/dev/index.html
+++ b/dev/index.html
@@ -16,26 +16,7 @@
         <!-- endbuild -->
     </head>
     <body>
-        <div class="container-fluid main-container">
-
-            <div class="navbar navbar-static-top">
-              <div class="navbar-inner">
-                <div class="container">
-                  <a class="brand" href=".">Torrent Engine Searcher</a>
-                  <div class="nav-collapse collapse">
-                    <ul class="nav">
-                      <li class="active">
-                        <a href=".">Home</a>
-                      </li>
-                      <li>
-                        <a href=".">Get started</a>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-            </div>
-
+        <div class="main-container container-fluid">
             <div class="row-fluid">
                <div class="sidebar span2">
                    <!--Sidebar content-->
