--- a/dev/index.html
+++ b/dev/index.html
@@ -10,9 +10,9 @@
         <meta name="description" content="Scan all the best torrent engines from one site and find the torrents you want.">
         <meta name="viewport" content="width=device-width">
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-        <link rel="stylesheet" href="styles/main.css">
-        <!-- build:js scripts/vendor/modernizr.js -->
-        <script src="bower_components/modernizr/modernizr.js"></script>
+        <link rel="stylesheet" href="/styles/main.css">
+        <!-- build:js /scripts/vendor/modernizr.js -->
+        <script src="/bower_components/modernizr/modernizr.js"></script>
         <!-- endbuild -->
     </head>
     <body>
@@ -43,8 +43,8 @@
 
         </script>
 
-        <!-- build:js scripts/main.js -->
-        <script data-main="scripts/main" src="bower_components/requirejs/require.js"></script>
+        <!-- build:js /scripts/main.js -->
+        <script data-main="/scripts/main" src="/bower_components/requirejs/require.js"></script>
         <!-- endbuild -->
 
         <!-- Start of StatCounter Code for Default Guide -->
