--- a/dev/index.html
+++ b/dev/index.html
@@ -17,6 +17,11 @@
     </head>
     <body>
         <div class="main-container container-fluid">
+            <div class="header row-fluid">
+                <div class="navigation-top navbar navbar-static-top">
+                    <!--Navbar content-->
+                </div>
+            </div>
             <div class="row-fluid">
                <div class="sidebar span2">
                    <!--Sidebar content-->
