--- a/dev/index.html
+++ b/dev/index.html
@@ -16,20 +16,22 @@
         <!-- endbuild -->
     </head>
     <body>
-        <div class="main-container container-fluid">
-            <div class="header row-fluid">
-                <div class="navigation-top navbar navbar-static-top">
-                    <!--Navbar content-->
+        <div class="app-container container-fluid">
+            <div class="app-row row-fluid">
+                <div class="header row-fluid">
+                    <div class="navigation-top navbar navbar-static-top">
+                        <!--Navbar content-->
+                    </div>
                 </div>
-            </div>
-            <div class="row-fluid">
-               <div class="sidebar span2">
-                   <!--Sidebar content-->
-                   <div class="search row-fluid"></div>
-               </div>
-               <div class="content span10">
-                   <!--Body content-->
-               </div>
+                <div class="row-fluid">
+                   <div class="sidebar span2">
+                       <!--Sidebar content-->
+                       <div class="search row-fluid"></div>
+                   </div>
+                   <div class="content span10">
+                       <!--Body content-->
+                   </div>
+                </div>
             </div>
         </div>
 
